--- a/login.html
+++ b/login.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="login.css">
-    <title>Document</title>
+    <link rel="shortcut icon" href="Logo2.png" type="image/x-icon">
+    <title>ChatChain-Login</title>
 </head>
 <body>
     <div class="header">
