--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="sigin.css">
     <link rel="shortcut icon" href="Logo2.png" type="image/x-icon">
-    <title>ChatChainn-Signin</title>
+    <title>ChatChain-Signin</title>
 </head>
 <body>
     <div class="header">
