--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
         <div class="left" id="left">
         <div class="header">
             <div class="logo">
-                <img src="Logo.png" alt="" height="30px">
+                <img src="Logo2.png" alt="" height="30px">
                 <p>ChatChain</p>
             </div>
             <i class="fa-solid fa-bars" id="bar"></i>
@@ -43,13 +43,18 @@
         </div>
         <div class="line"></div>
         <div class="options">
-            <div class="Notification">
+            <div class="Notification" id="Notification">
                 <i class="fa-solid fa-bell"></i>
                 <p>Notification</p>
             </div>
             <div class="Members">
                 <i class="fa-solid fa-user-group"></i>
                 <p>Members</p>
+            </div>
+            <div id="toggleTheme">
+                <i class="fa-solid fa-moon" id="moon"></i>
+                <i class="fa-solid fa-sun" id="sun"></i>
+                <p id="ThemeId">Dark Mode</p>
             </div>
             <div class="Invite">
                 <i class="fa-solid fa-user-plus"></i>
