--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="sigin.css">
-    <link rel="shortcut icon" href="Logo2.png" type="image/x-icon">
+    <link rel="stylesheet" href="/CSS/sigin.css">
+    <link rel="shortcut icon" href="/Logo2.png" type="image/x-icon">
     <title>ChatChain-Signin</title>
 </head>
 <body>
@@ -35,6 +35,6 @@
         <input type="password" class="password">
         <button class="signbutton">Sign in</button>
     </div>
-    <script type="module" src="sigin.js"></script>
+    <script type="module" src="/JavaScript/sigin.js"></script>
 </body>
 </html>
