--- a/HTML/main.html
+++ b/HTML/main.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="/CSS/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="Logo2.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/Logo2.png" type="image/x-icon">
     <title>ChatChain</title>
 </head>
 <body>
@@ -67,6 +67,6 @@
         </div>
     </div>
     </div> 
-    <script type="module" src="main.js"></script>
+    <script type="module" src="/JavaScript/main.js"></script>
 </body>
 </html>
