--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="/CSS/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="/Logo2.png" type="image/x-icon">
+    <link rel="shortcut icon" href="Logo2.png" type="image/x-icon">
     <title>ChatChain</title>
 </head>
 <body>
